# gwsnr

./: .coverage  .gitignore  .pypirc  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  docstring_template.py  gwsnr.yaml  gwsnr.yml  gwsnr_code_overview.puml  gwsnr_linux_cpu.yaml  gwsnr_linux_gpu.yaml  gwsnr_mac.yaml  optimized_interpolation.py  pyproject.toml  req.txt  requirements.txt  requirements_old.txt  requirements_sphinx.txt  setup.py  snr_data.json  snr_data_interpolation.json  snr_data_jax.json
ann_data/: ann_model_H1.h5  ann_model_L1.h5  error_adjustment_H1.json  error_adjustment_V1.json  scaler_H1.pkl
arxiv/: Makefile  latex.template  paper.aux  paper.bib  paper.fdb_latexmk  paper.fls  paper.md  paper.out  paper.run.xml  paper.tex  paper_old.tex  paper_old2.aux  paper_old2.bcf  paper_old2.fdb_latexmk  paper_old2.fls  paper_old2.run.xml  paper_old2.tex
dev/: ann_jax copy_stable.ipynb  ann_jax copy_stableV1.ipynb  ann_jax.ipynb  ann_modelCE_final.h5  ann_modelET1.h5  ann_modelET1_final.h5  ann_modelET1_final1.h5  ann_modelET3.h5  ann_modelL1.h5  ann_testing.ipynb  ann_training.ipynb  ann_training_CE.ipynb  ann_training_ET.ipynb  ann_training_ET_with_dl.ipynb  ann_training_L1.ipynb  ann_training_L1H1V1.ipynb  ann_training_no_extra_scaling.ipynb  ann_training_no_extra_scaling_inclination_massratio.ipynb  gps_psd_test.ipynb  model_generator.ipynb  pdet_ml.ipynb  psd_interpolated.ipynb  ripple_test.ipynb  ripple_test2.ipynb  scalerH1.pkl  scalerL1.pkl  scalerV1.pkl  skymap_combined_PHM_high_spin.fits  test.fits  trained_ann_model.joblib  training_data_generation_ann copy.ipynb  training_data_generation_ann.ipynb  training_data_generation_ann_3G.ipynb  training_data_generation_ann_uniform.ipynb
devdir/: ann_jax copy_deff.ipynb  ann_jax copy_stable.ipynb  ann_jax copy_stableH1.ipynb  ann_jax_random_dist.ipynb  ann_model.h5  ann_modelA1.h5  ann_modelCE.h5  ann_modelET2.h5  ann_modelET2_final.h5  ann_modelET3_final.h5  ann_modelH1.h5  ann_modelH1_final.h5  ann_modelL1_final2.h5  ann_modelL1_no_extra_scaling.h5  ann_modelL1_no_extra_scaling_inclination.h5  ann_modelL1_no_extra_scaling_inclination_massratio.h5  ann_modelV1.h5  ann_testing.ipynb  ann_training.ipynb  ann_training_3G.ipynb  ann_training_CE.ipynb  ann_training_ET.ipynb  ann_training_ET_without_inclination.ipynb  ann_training_L1H1V1 copy.ipynb  ann_training_L1H1V1.ipynb  ann_training_extra_scaling.ipynb  ann_training_extra_scaling_with_inclination.ipynb  ann_training_no_extra_scaling_all_params.ipynb  ann_training_no_extra_scaling_final.ipynb  ann_training_no_extra_scaling_inclination.ipynb  catmull_rom_spline copy 2.ipynb  catmull_rom_spline copy.ipynb  catmull_rom_spline.ipynb  jax_test.ipynb  jax_vs_numba.ipynb  jaxjit_interpolators_old.py  matched_filter_snr.ipynb  mlx_interpolators.py  mlx_test.ipynb  model_generator.ipynb  (+12 more)
docs/: Codeoverview.md  Installation.rst  Summary.ipynb  Summary.md  Summary_.ipynb  ann.md  conf.py  detectionstatistics.md  detectionstatistics_old.md  gwsnr.ann.rst  gwsnr.core.rst  gwsnr.jax.rst  gwsnr.numba.rst  gwsnr.ripple.rst  gwsnr.rst  gwsnr.utils.rst  horizondistance.md  hybrid.md  index.rst  innerproduct.md  installation_.md  interpolation.md  mermaid.md  modules.rst  performancesummary.md  probabilityofdetection.md  psd.md  requirements.yml  requirements_all.txt  snr generation.ipynb  test.rst
docs_old/: Short Example.ipynb  conf.py  index.rst  requirements.txt  requirements.yml  snr_generation.ipynb
examples/: Interpolation half scaled method.ipynb  README.md  Untitled.ipynb  XPHM.ipynb  ann_model_generation copy.ipynb  ann_model_generation.ipynb  ann_model_generation_1.ipynb  ann_model_generation_2.ipynb  ann_model_generation_H1.ipynb  ann_model_generation_L1.ipynb  ann_model_generation_V1.ipynb  ann_model_generation_custom.ipynb  bicubic_interpolation copy.ipynb  bicubic_interpolation.ipynb  c_test.ipynb  cbc.ipynb  dealing_with_interferometer.ipynb  dealing_with_psds.ipynb  dev copy.ipynb  dev.ipynb  example_quintet_snr_computation.py  gwsnrdev.py  inner_product.ipynb  interpolation.ipynb  interpolation_speed_test.ipynb  interpolator_generation.ipynb  jaxsnr copy.ipynb  jaxsnr.ipynb  machine_learning_pdet.ipynb  matplotlibrc  multiprocessing_routine.py  njit_functions.py  partial_snr_vs.ipynb  pdet.ipynb  run_time_bilby_inner_product.npy  run_time_gwsnr_inner_product.npy  run_time_jax_cpu.npy  run_time_mlx_gpu.npy  run_time_numba_cpu.npy  snr_generation.ipynb  (+9 more)
(+360 files in other folders)
